<resources>
    <string name="app_name">Pollution Checker</string>
    <string name="intro">Type a city:</string>
    <string name="example">E.g.: Bucharest</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="cleared_message">History cleared</string>
    <string name="delete">Delete</string>
    <string name="city_details_placeholder">City, Province, Country</string>
    <string name="city_details">%1$s, %2$s, %3$s</string>
    <string name="city_name_placeholder">City Name Placeholder</string>
    <string name="aqi_index">AQI INDEX</string>
    <string name="aqi_rating">AQI RATING</string>
    <string name="aqi_good">Good</string>
    <string name="aqi_moderate">Moderate</string>
    <string name="aqi_unhealthyforsensitivegroups">Unhealthy for sensitive groups</string>
    <string name="aqi_unhealthy">Unhea;thy</string>
    <string name="aqi_veryunhealthy">Very unhealthy</string>
    <string name="aqi_hazardous">Hazardous</string>
    <string name="clear">Clear</string>
    <string name="aqi_text">AQI:</string>
    <string name="pm25_text">PM2.5:</string>
    <string name="pm10_text">PM10:</string>
    <string name="o3_text">O3:</string>
    <string name="no2_text">NO2:</string>
    <string name="so2_text">SO2:</string>
    <string name="co_text">CO:</string>
    <string name="empty" />
    <string name="options">Options</string>
    <string name="timestamp_placeholder">Timestamp Placeholder</string>
    <string name="face_image">face image</string>
    <string name="earth_polluted">earth polluted</string>
    <string name="pollution_worried">Worried about pollution?</string>
</resources>
