<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/padd_8">

    <ImageView
        android:id="@+id/listIcon"
        android:layout_width="@dimen/thumbnail"
        android:layout_height="@dimen/thumbnail"
        android:contentDescription="@string/face_image"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/city_details_placeholder"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/deleteButton"
            app:layout_constraintStart_toEndOf="@+id/listIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewRatingText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:layout_weight="2"
                android:text="@string/aqi_rating"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintBaseline_toBaselineOf="@+id/textViewRating"
                app:layout_constraintEnd_toStartOf="@+id/textViewRating"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/listIcon" />

            <TextView
                android:id="@+id/textViewRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:layout_weight="1"
                android:background="@color/colorError"
                android:gravity="center"
                android:text="@string/aqi_index"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/deleteButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textViewRatingText"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="@dimen/ic_delete"
        android:layout_height="@dimen/ic_delete"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
</LinearLayout>