<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="CityInfoViewModel"
                type="ro.pub.acs.pollutionchecker.city_info.CityInfoViewModel" />
        <variable name="searchedCity" type="ro.pub.acs.pollutionchecker.database.SearchedCity"/>
        <variable name="navController" type="androidx.navigation.NavController" />
        <variable name="directionsHistory" type="androidx.navigation.NavDirections" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".city_info.CityInfoFragment">

        <TextView
            android:id="@+id/city_region_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:text="@{@string/city_details(searchedCity.city, searchedCity.region, searchedCity.country)}"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/city_name_placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/aqi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorError"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@{searchedCity.aqi >= 0 ? String.valueOf(searchedCity.aqi) : @string/empty}"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rating"
                    style="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:text="@string/aqi_rating"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/pm25Text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/pm25_text"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/size_16" />

                    <TextView
                        android:id="@+id/pm25Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@{searchedCity.pm25 >= 0 ? String.valueOf(searchedCity.pm25) : @string/empty}"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/size_16" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/pm10Text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/pm10_text"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/size_16" />

                    <TextView
                        android:id="@+id/pm10Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@{searchedCity.pm10 >= 0 ? String.valueOf(searchedCity.pm10) : @string/empty}"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/size_16" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/o3Text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/o3_text"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/size_16" />

                    <TextView
                        android:id="@+id/o3Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@{searchedCity.o3 >= 0 ? String.valueOf(searchedCity.o3) : @string/empty}"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/size_16" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/no2Text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/no2_text"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/size_16" />

                    <TextView
                        android:id="@+id/no2Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@{searchedCity.no2 >= 0 ? String.valueOf(searchedCity.no2) : @string/empty}"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/size_16" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/so2Text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/so2_text"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/size_16" />

                    <TextView
                        android:id="@+id/so2Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@{searchedCity.so2 >= 0 ? String.valueOf(searchedCity.so2) : @string/empty}"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/size_16" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/coText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/co_text"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/size_16" />

                    <TextView
                        android:id="@+id/coValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@{searchedCity.co >= 0 ? String.valueOf(searchedCity.co) : @string/empty}"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/size_16" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="@dimen/thumbnail"
                    android:layout_height="@dimen/thumbnail"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/activity_padding_horizontal"
                    android:contentDescription="@string/face_image"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/timestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:text="@{searchedCity.timestamp}"
                    tools:text="@string/timestamp_placeholder" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>